truncate stupidly long app names on details pages (bug 704812)

--- a/media/css/impala/addon_details.less
+++ b/media/css/impala/addon_details.less
@@ -68,6 +68,12 @@
     padding: 1px 0 !important;
 }
 
+#addon h1,
+#addon-summary,
+#addon-description {
+    overflow: hidden;
+}
+
 .version-number {
     color: #999;
     font-size: .8em;
